--- a/src/main/resources/templates/modals/perfil.html
+++ b/src/main/resources/templates/modals/perfil.html
@@ -206,27 +206,27 @@
       
         <!-- Contenido RRSS -->
         <div id="Twitter" class="empresa w3-container w3-padding" style="display:block">
-          <span><img src="img/twitter.png" width="20" />Twitter</span>
-          <input type="text" name="nombreTwitter" placeholder="Nombre de la cuenta" class="w3-input">
-          <input type="number" name="seguidoresTwitter" placeholder="Nº de seguidores"  min="0" class="w3-input">
+          <span><img class="w3-margin" src="img/twitter.png" width="20" />Twitter</span>
+          <input type="text" name="nombreTwitter" placeholder="Nombre de la cuenta" class="w3-input w3-center">
+          <input type="number" name="seguidoresTwitter" placeholder="Nº de seguidores"  min="0" class="w3-input w3-center">
         </div>
       
         <div id="Facebook" class="empresa w3-container w3-padding" style="display:none">
-          <span><img src="img/facebook.png" width="20" />Facebook</span>
-          <input type="text" name="nombreFacebook" placeholder="Nombre de la cuenta" class="w3-input">
-          <input type="number" name="seguidoresFacebook" placeholder="Nº de seguidores"  min="0" class="w3-input"> 
+          <span><img class="w3-margin" src="img/facebook.png" width="20" />Facebook</span>
+          <input type="text" name="nombreFacebook" placeholder="Nombre de la cuenta" class="w3-input w3-center">
+          <input type="number" name="seguidoresFacebook" placeholder="Nº de seguidores"  min="0" class="w3-input w3-center"> 
         </div>
       
         <div id="Instagram" class="empresa w3-container w3-padding" style="display:none">
-          <span><img src="img/instagram.png" width="20" />Instagram</span>
-          <input type="text" name="nombreInstagram" placeholder="Nombre de la cuenta" class="w3-input">
-          <input type="number" name="seguidoresInstagram" placeholder="Nº de seguidores"  min="0" class="w3-input">
+          <span><img class="w3-margin" src="img/instagram.png" width="20" />Instagram</span>
+          <input type="text" name="nombreInstagram" placeholder="Nombre de la cuenta" class="w3-input w3-center">
+          <input type="number" name="seguidoresInstagram" placeholder="Nº de seguidores"  min="0" class="w3-input w3-center">
         </div>
       
         <div id="Youtube" class="empresa w3-container w3-padding" style="display:none">
-          <span><img src="img/youtube.png" width="20" />Youtube</span> 
-          <input type="text" name="nombreYoutube" placeholder="Nombre de la cuenta" class="w3-input">
-          <input type="number" name="seguidoresYoutube" placeholder="Nº de seguidores"  min="0" class="w3-input">
+          <span><img class="w3-margin" src="img/youtube.png" width="20" />Youtube</span> 
+          <input type="text" name="nombreYoutube" placeholder="Nombre de la cuenta" class="w3-input w3-center">
+          <input type="number" name="seguidoresYoutube" placeholder="Nº de seguidores"  min="0" class="w3-input w3-center">
         </div>
 
       </div>
