--- a/src/main/resources/static/css/administracion.css
+++ b/src/main/resources/static/css/administracion.css
@@ -177,9 +177,7 @@ h3{
     margin-left: 5em;
 }
 
-input{
-	border-radius: 20px;
-}
+
 
 .btnEnviar{
 	background-color: #6ed1dd;
@@ -187,7 +185,7 @@ input{
 	margin-left: 1em;
 }
 
-form{
+#adminForm{
     width: 30em;
     display: flex;
     justify-content: space-between;
