--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -27,23 +27,19 @@
                     <a id="denunciasAdmin" class="category">Denuncias</a>
                 </div>
                 <div class="busqueda">
-                    <form>
-                        <input type="text" class="textoBusqueda" placeholder="  Nombre de usuario">
+                    <form id="adminForm">
+                        <input type="text" class="textoBusqueda w3-center" placeholder="  Inserte un nombre">
                         <input type="submit" value="Buscar" class="btnEnviar">
                     </form>
                 </div>
             </div>
-            <div class="contenido">
 
-                <div class="recientes">
-                    <h3>Eventos recientes</h3>
-                </div>
-            </div>
         </div>
 
     
     <!-- Lista Admin -->
-    <div id="tablaAdministracion" th:replace="fragments/tablaAdmin.html"></div>
+<div id="tablaAdministracion">
+    <div  th:replace="fragments/tablaAdmin.html"></div></div>
 </main>
 
     <!-- Footer -->
