--- a/src/main/resources/templates/modals/perfil.html
+++ b/src/main/resources/templates/modals/perfil.html
@@ -16,52 +16,53 @@
   </header>
 
   <!-- Contenido perfil -->
-  <form id="formularioPerfil" th:action="${modo=='EDICION'}?@{/perfil/edicion}:@{/perfil/registra}" method="POST" enctype="multipart/form-data">
+  <form id="formularioPerfil" class="w3-display-container" th:action="${modo=='EDICION'}?@{/perfil/edicion}:@{/perfil/registra}" method="POST" enctype="multipart/form-data">
 
     <!-- Nombre de la cuenta (CREACION, EDICION) -->
     <div class="divCentrado" th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
       <h2 class="w3-padding-24">Nombre cuenta</h2>
-      <input th:if="${modo} eq 'CREACION'" type="text" name="nombreCuenta" placeholder="Introduzca su usuario"
-        required class="w3-input"></input>
+      <input th:if="${modo} eq 'CREACION'" type="text" name="nombreCuenta" placeholder="Introduzca su usuario" required
+        class="w3-input"></input>
       <span th:if="${modo} eq 'EDICION'" th:text="${usuario.nombreCuenta}" class="w3-padding-24">Nombre cuenta</span>
     </div>
 
 
 
-	<!-- Nombre y apellidos (EDICION, VISTA) -->
-	<div  th:unless="${modo} eq 'CREACION'">
-		<div th:if="${usuario.hasRole('EMPRESA')}" class="divCentrado">
-			<h2>Nombre de la empresa</h2>
-	    	<span th:if="${modo} eq 'VISTA'" th:text="${usuario.nombre}"></span>
-			<input th:if="${modo} eq 'EDICION'" class="w3-input" type="text" name="nombre" th:value="${usuario.nombre}"  placeholder="Introduzca el nombre de la empresa"  required ></input>
-			<input th:if="${modo} eq 'EDICION'" class="w3-margin-top w3-input" type="text" name="apellidos" style="display:none" ></input>
+    <!-- Nombre y apellidos (EDICION, VISTA) -->
+    <div th:unless="${modo} eq 'CREACION'">
+      <div th:if="${usuario.hasRole('EMPRESA')}" class="divCentrado">
+        <h2>Nombre de la empresa</h2>
+        <span th:if="${modo} eq 'VISTA'" th:text="${usuario.nombre}"></span>
+        <input th:if="${modo} eq 'EDICION'" class="w3-input" type="text" name="nombre" th:value="${usuario.nombre}"
+          placeholder="Introduzca el nombre de la empresa" required></input>
+        <input th:if="${modo} eq 'EDICION'" class="w3-margin-top w3-input" type="text" name="apellidos"
+          style="display:none"></input>
 
-		</div>
+      </div>
 
-		<div th:unless="${usuario.hasRole('EMPRESA')}" class="divCentrado">
-			<h2>Nombre y apellidos</h2>
-			<span th:if="${modo} eq 'VISTA'" th:text="${usuario.nombre} + ' ' + ${usuario.apellidos}"></span>
-		    <input th:if="${modo} eq 'EDICION'" class="w3-input" type="text" name="nombre" th:value="${usuario.nombre}" required ></input>
-			<input th:if="${modo} eq 'EDICION'" class="w3-margin-top w3-input" type="text" name="apellidos" th:value="${usuario.apellidos}" required ></input>
-		</div>
-	</div>
+      <div th:unless="${usuario.hasRole('EMPRESA')}" class="divCentrado">
+        <h2>Nombre y apellidos</h2>
+        <span th:if="${modo} eq 'VISTA'" th:text="${usuario.nombre} + ' ' + ${usuario.apellidos}"></span>
+        <input th:if="${modo} eq 'EDICION'" class="w3-input" type="text" name="nombre" th:value="${usuario.nombre}"
+          required></input>
+        <input th:if="${modo} eq 'EDICION'" class="w3-margin-top w3-input" type="text" name="apellidos"
+          th:value="${usuario.apellidos}" required></input>
+      </div>
+    </div>
 
     <!-- Contraseña (CREACION, EDICION) -->
     <div class="divCentrado" th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
       <h2 class="w3-padding-24">Contraseña</h2>
-      <input th:if="${modo} eq 'CREACION'" type="password" name="pass1" placeholder="Introduzca su contraseña"
-        required class="w3-input"></input>
-      <input th:if="${modo} eq 'EDICION'" type="password" name="pass1"  placeholder="Introduzca su  nueva contraseña"
-         class="w3-input" size=30></input>
+      <input th:if="${modo} eq 'CREACION'" type="password" name="pass1" placeholder="Introduzca su contraseña" required
+        class="w3-input"></input>
+      <input th:if="${modo} eq 'EDICION'" type="password" name="pass1" placeholder="Introduzca su  nueva contraseña"
+        class="w3-input" size=30></input>
       <br>
-      <input th:if="${modo} eq 'CREACION'" type="password" name="pass2" class="w3-margin-top w3-input" placeholder="Repita la contraseña"
-        required ></input>
-      <input th:if="${modo} eq 'EDICION'" type="password" name="pass2" class="w3-margin-top w3-input" placeholder="Repita la nueva contraseña"
-         ></input>
+      <input th:if="${modo} eq 'CREACION'" type="password" name="pass2" class="w3-margin-top w3-input"
+        placeholder="Repita la contraseña" required></input>
+      <input th:if="${modo} eq 'EDICION'" type="password" name="pass2" class="w3-margin-top w3-input"
+        placeholder="Repita la nueva contraseña"></input>
     </div>
-
-
-
 
 
     <!-- Imagen -->
@@ -78,11 +79,10 @@
     </div>
 
 
-  
-      <!-- Tags -->
-      <div id="tags" th:if="${modo} eq 'VISTA'">
-        <button th:each="i : ${#strings.listSplit(usuario.tags, ',')}" class="w3-button w3-white tags" th:text="${i}" style="border-radius:12px;">Tags</li>
-      </div>
+    <!-- Tags -->
+    <div id="tags" th:if="${modo} eq 'VISTA'">
+      <button th:each="i : ${#strings.listSplit(usuario.tags, ',')}" class="w3-button w3-white tags" th:text="${i}" style="border-radius:12px;">Tags</li>
+    </div>
 
     <div class="tags-perfil" th:unless="${modo} eq 'VISTA'">
       <h2>Tags relacionados con el perfil</h2>
@@ -94,83 +94,69 @@
     </div>
 
 
-
-	<div th:if="${modo} eq 'CREACION'">
-	<h2 class="w3-padding-24">Tipo de cuenta</h2>
-	<select class="w3-select w3-border w3-margin-bottom" id="tipoCuenta" name="tipoCuenta" required>
-    <option value="" disabled selected>Elige tu tipo de cuenta</option>
-    <option value="Influencer">Influencer</option>
-    <option value="Empresa">Empresa</option>
-	</select>
-	</div>
+    <!-- Selector de Rol (CREACION)-->
+    <div th:if="${modo} eq 'CREACION'">
+    <h2 class="w3-padding-24">Tipo de cuenta</h2>
+    <select class="w3-select w3-border w3-margin-bottom" id="tipoCuenta" name="tipoCuenta" required>
+      <option value="" disabled selected>Elige tu tipo de cuenta</option>
+      <option value="Influencer">Influencer</option>
+      <option value="Empresa">Empresa</option>
+    </select>
+    </div>
 
     <!-- Valoracion (VISTA, EDICION) -->
     <div class="divCentrado" th:if="${modo} eq 'VISTA' or ${modo} eq 'EDICION'">
-	  <h2>Valoración media</h2>
-
-			<div class="score" th:if="${usuario.score!=null}">
-				<th:block th:each="i: ${#numbers.sequence(1, usuario.score)}">					
-					<i class="fa fa-star w3-margin estrella"></i>
-				</th:block>
-				<i th:if="${#strings.substring(usuario.score,2) >= '5'}" class="fa fa-star-half-alt w3-margin estrella"></i>
-			</div>
-
-        <div class="score" th:if="${usuario.score == null}">
-          <p>No tiene valoraciones aun</p>
-        </div>
-      </div>    
-  
-
-
-  <!-- Historial propuestas (VISTA, EDICION) -->
-      <div th:if="${modo} eq 'VISTA' or ${modo} eq 'EDICION'" class="divCentrado w3-margin-bottom">
-        <h2 class="w3-padding-24">Historial de propuestas</h2>
-        <div id="propuestas">
-          <ul>
-            <li>Propuesta1</li>
-            <li>Propuesta2</li>
-            <li>Propuesta3</li>
-            <li>Propuesta4</li>
-          </ul>
-        </div>
+      <h2>Valoración media</h2>
+      <div class="score" th:if="${usuario.score!=null}">
+        <th:block th:each="i: ${#numbers.sequence(1, usuario.score)}">					
+          <i class="fa fa-star w3-margin estrella"></i>
+        </th:block>
+        <i th:if="${#strings.substring(usuario.score,2) >= '5'}" class="fa fa-star-half-alt w3-margin estrella"></i>
       </div>
+      <div class="score" th:if="${usuario.score == null}">
+        <p>No tiene valoraciones aun</p>
+      </div>
+    </div>
+
+
+    <!-- Historial propuestas (VISTA, EDICION) -->
+    <div th:if="${modo} eq 'VISTA' or ${modo} eq 'EDICION'" class="divCentrado w3-margin-bottom">
+      <h2 class="w3-padding-24">Historial de propuestas</h2>
+      <div id="propuestas">
+        <ul>
+          <li>Propuesta1</li>
+          <li>Propuesta2</li>
+          <li>Propuesta3</li>
+          <li>Propuesta4</li>
+        </ul>
+      </div>
+    </div> <!-- Hacer historial de propuestas con query en el modelo -->
     
+
     <!-- Nombre Perfil -->
-	<div th:if="${modo} eq 'CREACION'" class="divCentrado" id="divNombreEmpresa" style="display:none">
+	  <div th:if="${modo} eq 'CREACION'" class="divCentrado" id="divNombreEmpresa" style="display:none">
 	    <h2 class="w3-padding-24" id="h2nombre">Nombre de la empresa</h2>
 	    <input type="text" id="nombreEmpresa" class="w3-input" name="nombre" placeholder="Introduzca el nombre de la empresa" required></input>
-
-	</div>
-	
-		
+	  </div>
 
 	
-	    <!-- Nombre Perfil -->
-	<div th:if="${modo} eq 'CREACION'" class="divCentrado" id="divNombreInfluencer" style="display:none">
-	    <h2 class="w3-padding-24" id="h2nombre">Nombre y apellidos</h2>
-	    <input type="text"  id="nombreInfluencer" class="w3-input" name="nombre" placeholder="Introduzca su nombre" required></input>
-		<input type="text"  id="apellidosInfluencer" class="w3-margin-top w3-input"  name="apellidos" placeholder="Introduzca sus apellidos"required></input>
-	</div>
-
-  <!-- Hacer historial de propuestas con query en el modelo -->
-	
-	<div  class="divCentrado" id="divPerfilesCreacion" style="display:none">
-	    
-      <!-- Apellidos -->
-
-
-
-	
+	  <!-- Nombre Perfil -->
+    <div th:if="${modo} eq 'CREACION'" class="divCentrado" id="divNombreInfluencer" style="display:none">
+      <h2 class="w3-padding-24" id="h2nombre">Nombre y apellidos</h2>
+      <input type="text"  id="nombreInfluencer" class="w3-input" name="nombre" placeholder="Introduzca su nombre" required></input>
+      <input type="text"  id="apellidosInfluencer" class="w3-margin-top w3-input"  name="apellidos" placeholder="Introduzca sus apellidos"required></input>
+    </div>
+  
+    <!-- Div Perfiles de creacion (INFLUENCER) -->
+    <div  class="divCentrado" id="divPerfilesCreacion" style="display:none">
+      
       <!-- Edad -->
-     <h2 class="w3-padding-24">Edad media de los seguidores</h2>
-	<div class="divFlexSpaceEvenly">
+      <h2 class="w3-padding-24">Edad media de los seguidores</h2>
+      <div class="divFlexSpaceEvenly">
         <div th:if="${modo} eq 'VISTA'" id="edad-media" th:text="${usuario.edad}">Años de media</div>
         <input th:if="${modo} eq 'EDICION'" type="number" name="edad" min="0" max="100" value="Años de media" th:value="${usuario.edad}" class="inputCentrado inputEdad">
         <input th:if="${modo} eq 'CREACION'" type="number" name="edad" min="0" max="100" placeholder="Años de media" class="inputCentrado w3-input inputEdad">
-    
-	</div>
-	
-
+      </div>
 
       <!-- Seguidores-->
       <h2 class="w3-padding-24">Perfiles en redes sociales</h2>
@@ -187,7 +173,7 @@
       </ul>
 
       <div th:if="${modo} eq 'CREACION'" class="w3-container w3-margin-bottom">
-        
+
         <!-- Barra de seleccion RRSS -->
         <div class="w3-row w3-margin">
           <a onclick="abreEmpresa(event, 'Twitter');">
@@ -230,12 +216,18 @@
         </div>
 
       </div>
-	</div>
+
+    </div>
 
 
-      <!-- Botones interactivos -->
+    <!-- Botones interactivos -->
+    <div class="divCentrado">
       <button th:if="${modo} eq 'EDICION'" class="w3-btn btnColor w3-margin" type="submit">Guardar cambios</button>
       <button th:if="${modo} eq 'CREACION'" class="w3-btn btnColor w3-margin" id="botonRegistrarseUsuario" type="submit">Registrar usuario</button>
+      <button th:if="${modo} eq 'VISTA'" class="w3-display-topright" id="btnDenunciar">Denunciar</button>
+    </div>
+    
+
 
   </form>
 
