--- a/src/main/resources/templates/modals/propuesta.html
+++ b/src/main/resources/templates/modals/propuesta.html
@@ -24,10 +24,10 @@
 	:(${modo=='VISTA-ULTIMATUM'}?@{/propuesta/decideUltimatum}:(${modo=='ULTIMATUM'}?@{/propuesta/enviaUltimatum}:@{/propuesta/registraPropuesta}))"
 	 method="POST" enctype="multipart/form-data">
 	
-	<!-- Valor id oculto -->
-	<input th:if="${modo}!='CREACION' " type="hidden" name="idPropuesta" th:value="${propuesta.id}">
-	
-	
+    <!-- Valor id oculto -->
+    <input th:if="${modo}!='CREACION' " type="hidden" name="idPropuesta" th:value="${propuesta.id}">
+    
+    
     <!-- Texto propuesta -->
     <div class="texto-propuesta">
       <div th:if="${modo} eq 'CREACION'">
@@ -58,7 +58,7 @@
       <p>Edades comprendidas entre
 
         <select class="inputCentrado" id="edades" name="edades" th:if="${modo} eq 'ULTIMATUM' or ${modo} eq 'CREACION'" required>
-    	<option value="" disabled selected>Elige la edad objetivo</option>
+          <option value="" disabled selected>Elige la edad objetivo</option>
           <option value="5-10">5 - 10</option>
           <option value="10-15">10 - 15</option>
           <option value="15-20">15 - 20</option>
@@ -70,21 +70,18 @@
         </select>
         <span th:if="${modo} eq 'VISTA' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'"
           th:text="${propuesta?.edadMinPublico + ' - ' + propuesta?.edadMaxPublico}"> </span>
+
       años</p>
 
     </div>
-
 
 
     <!-- Sueldo de la propuesta -->
     <div class="sueldo-propuesta">
       <h2>Sueldo mensual</h2>
         <input th:if="${modo} eq 'ULTIMATUM' or ${modo} eq 'CREACION'" required type="number" name="sueldo" min="0" class="inputCentrado">
-		<span th:if="${modo} eq 'VISTA' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'"
-          th:text="${propuesta.sueldo + '€'}"> </span>
-
-     </div>
-  
+        <span th:if="${modo} eq 'VISTA' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'" th:text="${propuesta.sueldo + '€'}"> </span>
+    </div>
 
 
     <!-- Periodo -->
@@ -105,7 +102,6 @@
       </span>
       <img th:if="${modo} eq 'VISTA' or ${modo} eq 'ULTIMATUM' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'" id="imagen-propuesta"
         th:src="@{/propuesta/{id}/photo(id=${propuesta.id})}">
-
     </div>
 
     <!-- Tags -->
@@ -115,7 +111,7 @@
         placeholder="Introduzca los tags separados por comas"></textarea>
       <div th:if="${modo} eq 'VISTA' or ${modo} eq 'ULTIMATUM' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'">
         <button th:each="tag:${#strings.listSplit(propuesta.tags, ',')}" class="w3-button w3-white tags" th:text="${tag}"></button>
-    </div>
+      </div>
     </div>
 
     <!-- Botones interactivos -->
@@ -136,7 +132,6 @@
   <div class="divCentrado"> 
     <button th:if="${modo} eq 'CONTRATACION'" class="w3-btn btnColor w3-margin" onclick="document.getElementById('modal').style.display='none'">Cerrar contratación</button>
     <button th:if="${modo} eq 'VISTA' and ${session.u.hasRole('EMPRESA')}" class="w3-btn btnColor w3-margin" onclick="document.getElementById('modal').style.display='none'">Cerrar propuesta</button>
-
   </div>
 
 </body>
