--- a/src/main/resources/templates/modals/valoracion.html
+++ b/src/main/resources/templates/modals/valoracion.html
@@ -1,5 +1,5 @@
 <head>
-    <th:block th:replace="fragments/head.html :: header"/>
+    <th:block th:replace="fragments/head.html :: header" />
     <link rel="stylesheet" href="css/valoracion.css">
 </head>
 
@@ -10,48 +10,60 @@
 
 <body>
 
-	<form th:action="@{/contrataciones/valorar}" method="POST">
-	<input type="hidden" name="idCandidatura" th:value="${idCandidatura}">
-    <div class="w3-container">
-        <div class="w3-container w3-margin-bottom box divFlexSpaceEvenly divCentrado">
-            <div class="texto-propuesta">
-                <h2 th:text="${propuesta.nombre}"></h2>
-                <p th:text="${propuesta.descripcion}"></p>
-            </div>
-			<div >
-	            <img class="imgValoracion" th:src="@{/propuesta/{id}/photo(id=${propuesta.id})}"/>
-			</div>
-        </div>
-        <div class="w3-container w3-margin-bottom box divFlexSpaceEvenly">
-            <div id="cabecera">
-                <!-- Titulo -->
-                <h1>Valoración</h1>
-                
-                <!-- Imagen perfil -->
-                <img class="imgValoracion" th:src="@{/perfil/{id}/photo(id=${idUsuario})}" />
-				<input type="number" name="puntuacion" min="0" max="5" step="0.5" required class="w3-input w3-border w3-center w3-margin-bottom">
-                <!-- Estrellas -->
-                <div class="ec-stars-wrapper">
-                    <i class="estrella far fa-star"></i>
-                    <i class="estrella far fa-star"></i>
-                    <i class="estrella far fa-star"></i>
-                    <i class="estrella far fa-star"></i>
-                    <i class="estrella far fa-star"></i>
+    <form th:action="@{/contrataciones/valorar}" method="POST">
+        <input type="hidden" name="idCandidatura" th:value="${idCandidatura}">
+        <div class="w3-container">
+
+            <!-- Propuesta -->
+            <div class="w3-container w3-margin-bottom box divFlexSpaceEvenly divCentrado">
+                <div class="texto-propuesta">
+                    <h2 th:text="${propuesta.nombre}"></h2>
+                    <p th:text="${propuesta.descripcion}"></p>
+                </div>
+                <div>
+                    <img class="imgValoracion" th:src="@{/propuesta/{id}/photo(id=${propuesta.id})}" />
                 </div>
             </div>
-            <div class="comentario">
-                <p th:if="${modo} eq 'VISTA'" th:text="${valoracion.valoracion}"></p>
-          		<textarea th:if="${modo} eq 'CREACION'" name="valoracion" rows="10" cols="50" class="w3-input w3-border" required placeholder="Introduzca su valoracion"></textarea>
+
+            <!-- Valoracion -->
+            <div class="w3-container w3-margin-bottom box divFlexSpaceEvenly">
+                <div id="cabecera">
+                    <h1>Valoración</h1>
+
+                    <!-- Imagen perfil -->
+                    <img class="imgValoracion" th:src="@{/perfil/{id}/photo(id=${idUsuario})}" />
+                    <input type="number" name="puntuacion" min="0" max="5" step="0.5" required
+                        class="w3-input w3-border w3-center w3-margin-bottom">
+
+                    <!-- Estrellas -->
+                    <div class="ec-stars-wrapper">
+                        <i class="estrella far fa-star"></i>
+                        <i class="estrella far fa-star"></i>
+                        <i class="estrella far fa-star"></i>
+                        <i class="estrella far fa-star"></i>
+                        <i class="estrella far fa-star"></i>
+                    </div>
+                </div>
+
+                <!-- Comentario -->
+                <div class="comentario">
+                    <p th:if="${modo} eq 'VISTA'" th:text="${valoracion.valoracion}"></p>
+                    <textarea th:if="${modo} eq 'CREACION'" name="valoracion" rows="10" cols="50"
+                        class="w3-input w3-border" required placeholder="Introduzca su valoracion"></textarea>
+                </div>
+            </div>
+
+            <!-- Boton enviar valoracion-->
+            <div class="divCentrado">
+                <button th:if="${modo} eq 'CREACION'" class="w3-btn btnColor w3-margin" type="submit">Enviar valoración</button>
             </div>
         </div>
+    </form>
 
-        <div class="divCentrado">
-            <button th:if="${modo} eq 'CREACION'" class="w3-btn btnColor w3-margin" type="submit">Enviar valoración</button>
-        </div>
+    <!-- Boton de cerrar -->
+    <div class="divCentrado">
+        <button th:if="${modo} eq 'VISTA'" class="w3-btn btnColor w3-margin"
+            onclick="document.getElementById('modal').style.display='none'">Cerrar valoración</button>
     </div>
-	</form>
-	<div class="divCentrado">
-	            <button th:if="${modo} eq 'VISTA'" class="w3-btn btnColor w3-margin" onclick="document.getElementById('modal').style.display='none'">Cerrar valoración</button>
-	</div>
 
 </body>
