--- a/src/main/resources/static/css/valoracion.css
+++ b/src/main/resources/static/css/valoracion.css
@@ -9,6 +9,17 @@
 	padding: 0 2em 02em;
 }
 
+.boxDenuncia{
+		box-shadow: 0 1px 3px -2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24) !important;
+		border-radius: 20px !important;
+		margin: 2% !important;
+		padding: 1% !important;
+		background-color: #f9f9f9c4 !important;
+		border: solid 1pt lightgrey !important;
+		min-height: 410px !important;
+	
+}
+
 .texto-propuesta h2{
 	padding-bottom: 1em;
 }
