--- a/src/main/resources/templates/modals/denuncia.html
+++ b/src/main/resources/templates/modals/denuncia.html
@@ -1,5 +1,5 @@
 <head>
-    <th:block th:replace="fragments/head.html :: header"/>
+    <th:block th:replace="fragments/head.html :: header" />
     <link rel="stylesheet" href="css/valoracion.css">
 </head>
 
@@ -9,42 +9,39 @@
 </header>
 
 <body>
-	<form th:action="${modo=='CREACION'}?@{/denuncia/registrar}:@{/denuncia/tramitar}" method="POST">
+    <form th:action="${modo=='CREACION'}?@{/denuncia/registrar}:@{/denuncia/tramitar}" method="POST">
 
-    <div class="w3-container">
 
-        <!-- Denunciante-->
-        <div class="w3-container w3-margin-bottom box divFlexSpaceEvenly divCentrado">
-            <div class="divPerfilUsuario">
+            <!-- Denunciante-->
+            <div class="w3-container w3-margin-bottom boxDenuncia divFlexSpaceEvenly divCentrado">
+                <div class="divPerfilUsuario">
 
-                <h2>Nombre del denunciante</h2>
-                <p th:text="${denunciante.nombre}"></p>
+                    <h2>Nombre del denunciante</h2>
+                    <p th:text="${denunciante.nombre}"></p>
 
-                <h2>Rol del denunciante</h2>
-                <p th:text="${denunciante.hasRole('EMPRESA')?'Empresa':'Influencer'}"></p>
+                    <h2>Rol del denunciante</h2>
+                    <p th:text="${denunciante.hasRole('EMPRESA')?'Empresa':'Influencer'}"></p>
 
-                <h2>Valoración del denunciante</h2>
-                <div class="score" th:if="${denunciante.score!=null}">
-                    <th:block th:each="i: ${#numbers.sequence(1, denunciante.score)}">					
-                        <i class="fa fa-star w3-margin estrella"></i>
-                    </th:block>
-                    <i th:if="${#strings.substring(denunciante.score,2) >= '5'}" class="fa fa-star-half-alt w3-margin estrella"></i>
+                    <h2>Valoración del denunciante</h2>
+                    <div class="score" th:if="${denunciante.score!=null}">
+                        <th:block th:each="i: ${#numbers.sequence(1, denunciante.score)}">					
+                            <i class="fa fa-star w3-margin estrella"></i>
+                        </th:block>
+                        <i th:if="${#strings.substring(denunciante.score,2) >= '5'}" class="fa fa-star-half-alt w3-margin estrella"></i>
+                    </div>
+                    <div class="score" th:if="${denunciante.score == null}">
+                        <p>No tiene valoraciones aun</p>
+                    </div>
+                </div> 
+                <div >
+                    <img class="imgValoracion" th:src="@{/perfil/{id}/photo(id=${denunciante.id})}"/>
                 </div>
-                <div class="score" th:if="${denunciante.score == null}">
-                    <p>No tiene valoraciones aun</p>
-                </div>
-          </div> 
-
-
-
             </div>
-			<div >
-	            <img class="imgValoracion" th:src="@{/perfil/{id}/photo(id=${denunciante.id})}"/>
-			</div>
-        </div>
+
+			
 
         <!-- Denunciado -->
-        <div class="w3-container w3-margin-bottom box divFlexSpaceEvenly divCentrado">
+        <div class="w3-container w3-margin-bottom boxDenuncia divFlexSpaceEvenly divCentrado">
             <div class="divPerfilUsuario">
                 
                 <h2>Nombre del denunciado</h2>
@@ -73,14 +70,17 @@
 
 
         <!-- Denuncia -->
-        <div class="w3-container w3-margin-bottom box divFlexSpaceEvenly">
+        <div class="w3-container w3-margin-bottom boxDenuncia divFlexSpaceEvenly divCentrado">
             <div id="cabecera">
                 <!-- Titulo -->
                 <div th:if="${modo} eq 'CREACION'">
                     <!-- Valor id denunciado oculto-->
                     <input type="hidden" name="idDenunciado" th:value="${denunciado.id}">
-                    <h1>Título</h1>
-                    <input type="text" name="titulo" placeholder="Introduzca el título de la denuncia">
+
+                        <h1>Título</h1>
+                        <input type="text" name="titulo" placeholder="Introduzca el título de la denuncia" size="50" class="w3-center">
+
+                    
                     <h1>Descripción</h1>
                     <textarea name="descripcion" rows = "8" cols = "70" required placeholder="Introduzca la descripción de la denuncia"></textarea>
                 </div>
@@ -92,9 +92,12 @@
                     <h1>Descripción</h1>
                     <p th:text="${denuncia.descripcion}"></p>
                 </div>
+
             </div>
           
         </div>
+
+        <!-- Botones interactivos -->
         <div class="divCentrado">
             <button th:if="${modo} eq 'CREACION'" class="w3-btn btnColor w3-margin" type="submit">Enviar denuncia</button>
             <button th:if="${modo} eq 'TRAMITACION'" class="w3-btn btnColor w3-margin" type="submit">Marcar como tramitada</button>
