--- a/src/main/resources/templates/modals/perfil.html
+++ b/src/main/resources/templates/modals/perfil.html
@@ -16,72 +16,75 @@
   </header>
 
   <!-- Contenido perfil -->
-  <form id="formularioPerfil" class="w3-display-container" th:action="${modo=='EDICION'}?@{/perfil/edicion}:@{/perfil/registra}" method="POST" enctype="multipart/form-data">
+  <div class="w3-display-container">
 
-    <!-- Nombre de la cuenta (CREACION, EDICION) -->
-    <div class="divCentrado" th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
-      <h2 class="w3-padding-24">Nombre cuenta</h2>
-      <input th:if="${modo} eq 'CREACION'" type="text" name="nombreCuenta" placeholder="Introduzca su usuario" required
-        class="w3-input"></input>
-      <span th:if="${modo} eq 'EDICION'" th:text="${usuario.nombreCuenta}" class="w3-padding-24">Nombre cuenta</span>
-    </div>
+    <form id="formularioPerfil" th:action="${modo=='EDICION'}?@{/perfil/edicion}:@{/perfil/registra}" method="POST"
+      enctype="multipart/form-data">
 
-
-
-    <!-- Nombre y apellidos (EDICION, VISTA) -->
-    <div th:unless="${modo} eq 'CREACION'">
-      <div th:if="${usuario.hasRole('EMPRESA')}" class="divCentrado">
-        <h2>Nombre de la empresa</h2>
-        <span th:if="${modo} eq 'VISTA'" th:text="${usuario.nombre}"></span>
-        <input th:if="${modo} eq 'EDICION'" class="w3-input" type="text" name="nombre" th:value="${usuario.nombre}"
-          placeholder="Introduzca el nombre de la empresa" required></input>
-        <input th:if="${modo} eq 'EDICION'" class="w3-margin-top w3-input" type="text" name="apellidos"
-          style="display:none"></input>
-
+      <!-- Nombre de la cuenta (CREACION, EDICION) -->
+      <div class="divCentrado" th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
+        <h2 class="w3-padding-24">Nombre cuenta</h2>
+        <input th:if="${modo} eq 'CREACION'" type="text" name="nombreCuenta" placeholder="Introduzca su usuario"
+          required class="w3-input"></input>
+        <span th:if="${modo} eq 'EDICION'" th:text="${usuario.nombreCuenta}" class="w3-padding-24">Nombre cuenta</span>
       </div>
 
-      <div th:unless="${usuario.hasRole('EMPRESA')}" class="divCentrado">
-        <h2>Nombre y apellidos</h2>
-        <span th:if="${modo} eq 'VISTA'" th:text="${usuario.nombre} + ' ' + ${usuario.apellidos}"></span>
-        <input th:if="${modo} eq 'EDICION'" class="w3-input" type="text" name="nombre" th:value="${usuario.nombre}"
-          required></input>
-        <input th:if="${modo} eq 'EDICION'" class="w3-margin-top w3-input" type="text" name="apellidos"
-          th:value="${usuario.apellidos}" required></input>
+
+
+      <!-- Nombre y apellidos (EDICION, VISTA) -->
+      <div th:unless="${modo} eq 'CREACION'">
+        <div th:if="${usuario.hasRole('EMPRESA')}" class="divCentrado">
+          <h2>Nombre de la empresa</h2>
+          <span th:if="${modo} eq 'VISTA'" th:text="${usuario.nombre}"></span>
+          <input th:if="${modo} eq 'EDICION'" class="w3-input" type="text" name="nombre" th:value="${usuario.nombre}"
+            placeholder="Introduzca el nombre de la empresa" required></input>
+          <input th:if="${modo} eq 'EDICION'" class="w3-margin-top w3-input" type="text" name="apellidos"
+            style="display:none"></input>
+
+        </div>
+
+        <div th:unless="${usuario.hasRole('EMPRESA')}" class="divCentrado">
+          <h2>Nombre y apellidos</h2>
+          <span th:if="${modo} eq 'VISTA'" th:text="${usuario.nombre} + ' ' + ${usuario.apellidos}"></span>
+          <input th:if="${modo} eq 'EDICION'" class="w3-input" type="text" name="nombre" th:value="${usuario.nombre}"
+            required></input>
+          <input th:if="${modo} eq 'EDICION'" class="w3-margin-top w3-input" type="text" name="apellidos"
+            th:value="${usuario.apellidos}" required></input>
+        </div>
       </div>
-    </div>
 
-    <!-- Contraseña (CREACION, EDICION) -->
-    <div class="divCentrado" th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
-      <h2 class="w3-padding-24">Contraseña</h2>
-      <input th:if="${modo} eq 'CREACION'" type="password" name="pass1" placeholder="Introduzca su contraseña" required
-        class="w3-input"></input>
-      <input th:if="${modo} eq 'EDICION'" type="password" name="pass1" placeholder="Introduzca su  nueva contraseña"
-        class="w3-input" size=30></input>
-      <br>
-      <input th:if="${modo} eq 'CREACION'" type="password" name="pass2" class="w3-margin-top w3-input"
-        placeholder="Repita la contraseña" required></input>
-      <input th:if="${modo} eq 'EDICION'" type="password" name="pass2" class="w3-margin-top w3-input"
-        placeholder="Repita la nueva contraseña"></input>
-    </div>
-
-
-    <!-- Imagen -->
-    <h2 class="w3-padding-24">Imagen perfil</h2>
-    <div class="w3-center" th:if="${modo} eq 'VISTA'">
-      <img id="imagen-perfil" th:src="@{/perfil/{id}/photo(id=${usuario.id})}">
-    </div>
-    <div class="w3-center" th:if="${modo} eq 'EDICION'">
-      <img id="imagen-perfil" th:src="@{/perfil/{id}/photo(id=${usuario.id})}">
-      <!-- ¿Boton para borrar la foto? -->
-    </div>
-    <div th:unless="${modo} eq 'VISTA'">
-      <input type="file" name="imagenPerfil" class="w3-input w3-border">
-    </div>
+      <!-- Contraseña (CREACION, EDICION) -->
+      <div class="divCentrado" th:if="${modo} eq 'CREACION' or ${modo} eq 'EDICION'">
+        <h2 class="w3-padding-24">Contraseña</h2>
+        <input th:if="${modo} eq 'CREACION'" type="password" name="pass1" placeholder="Introduzca su contraseña"
+          required class="w3-input"></input>
+        <input th:if="${modo} eq 'EDICION'" type="password" name="pass1" placeholder="Introduzca su  nueva contraseña"
+          class="w3-input" size=30></input>
+        <br>
+        <input th:if="${modo} eq 'CREACION'" type="password" name="pass2" class="w3-margin-top w3-input"
+          placeholder="Repita la contraseña" required></input>
+        <input th:if="${modo} eq 'EDICION'" type="password" name="pass2" class="w3-margin-top w3-input"
+          placeholder="Repita la nueva contraseña"></input>
+      </div>
 
 
-    <!-- Tags -->
-    <div id="tags" th:if="${modo} eq 'VISTA'">
-      <button th:each="i : ${#strings.listSplit(usuario.tags, ',')}" class="w3-button w3-white tags" th:text="${i}" style="border-radius:12px;">Tags</li>
+      <!-- Imagen -->
+      <h2 class="w3-padding-24">Imagen perfil</h2>
+      <div class="w3-center" th:if="${modo} eq 'VISTA'">
+        <img id="imagen-perfil" th:src="@{/perfil/{id}/photo(id=${usuario.id})}">
+      </div>
+      <div class="w3-center" th:if="${modo} eq 'EDICION'">
+        <img id="imagen-perfil" th:src="@{/perfil/{id}/photo(id=${usuario.id})}">
+        <!-- ¿Boton para borrar la foto? -->
+      </div>
+      <div th:unless="${modo} eq 'VISTA'">
+        <input type="file" name="imagenPerfil" class="w3-input w3-border">
+      </div>
+
+
+      <!-- Tags -->
+      <div id="tags" th:if="${modo} eq 'VISTA'">
+        <button th:each="i : ${#strings.listSplit(usuario.tags, ',')}" class="w3-button w3-white tags" th:text="${i}" style="border-radius:12px;">Tags</li>
     </div>
 
     <div class="tags-perfil" th:unless="${modo} eq 'VISTA'">
@@ -224,12 +227,16 @@
     <div class="divCentrado">
       <button th:if="${modo} eq 'EDICION'" class="w3-btn btnColor w3-margin" type="submit">Guardar cambios</button>
       <button th:if="${modo} eq 'CREACION'" class="w3-btn btnColor w3-margin" id="botonRegistrarseUsuario" type="submit">Registrar usuario</button>
-      <button th:if="${modo} eq 'VISTA'" class="w3-display-topright" id="btnDenunciar">Denunciar</button>
     </div>
     
 
 
   </form>
+
+  <!-- Boton Denunciar -->
+  <button th:if="${modo} eq 'VISTA'" class="w3-display-topright" id="btnDenunciar" th:attr="data-id=${usuario.id}">Denunciar</button>
+
+  </div>
 
   <!-- Boton de cerrar -->
   <div class="divCentrado">
