--- a/src/main/resources/templates/modals/propuesta.html
+++ b/src/main/resources/templates/modals/propuesta.html
@@ -20,97 +20,105 @@
 
 
   <!-- Contenido propuesta -->
-  <form class="contenido-propuesta w3-display-container" th:action="${modo=='VISTA'}?@{/propuesta/solicitaPropuesta}
-	:(${modo=='VISTA-ULTIMATUM'}?@{/propuesta/decideUltimatum}:(${modo=='ULTIMATUM'}?@{/propuesta/enviaUltimatum}:@{/propuesta/registraPropuesta}))"
-	 method="POST" enctype="multipart/form-data">
-	
-    <!-- Valor id oculto -->
-    <input th:if="${modo}!='CREACION' " type="hidden" name="idPropuesta" th:value="${propuesta.id}">
-    
-    
-    <!-- Texto propuesta -->
-    <div class="texto-propuesta">
-      <div th:if="${modo} eq 'CREACION'">
+  <div class="w3-display-container">
+    <form class="contenido-propuesta"
+      th:action="${modo=='VISTA'}?@{/propuesta/solicitaPropuesta}
+	      :(${modo=='VISTA-ULTIMATUM'}?@{/propuesta/decideUltimatum}:(${modo=='ULTIMATUM'}?@{/propuesta/enviaUltimatum}:@{/propuesta/registraPropuesta}))"
+        method="POST" enctype="multipart/form-data">
 
-        <!-- Nombre -->
-        <h2>Nombre de la propuesta</h2>
-        <input name="nombre" type=text required size=30>
+      <!-- Valor id oculto -->
+      <input th:if="${modo}!='CREACION' " type="hidden" name="idPropuesta" th:value="${propuesta.id}">
 
-        <!-- Descripcion-->
-        <h2>Descripción</h2>
-        <textarea name="descripcion" rows="4" cols="50" required></textarea>
+
+      <!-- Texto propuesta -->
+      <div class="texto-propuesta">
+        <div th:if="${modo} eq 'CREACION'">
+
+          <!-- Nombre -->
+          <h2>Nombre de la propuesta</h2>
+          <input name="nombre" type=text required size=30>
+
+          <!-- Descripcion-->
+          <h2>Descripción</h2>
+          <textarea name="descripcion" rows="4" cols="50" required></textarea>
+        </div>
+        <div
+          th:if="${modo} eq 'ULTIMATUM' or ${modo} eq 'VISTA' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'">
+
+          <!-- Nombre -->
+          <h2 th:text="${propuesta.nombre}">Nombre de propuesta</h2>
+
+          <!-- Descripcion -->
+          <p th:text="${propuesta?.descripcion}">Aqui va la descripcion detallada de la propuesta</p>
+        </div>
+
       </div>
-      <div th:if="${modo} eq 'ULTIMATUM' or ${modo} eq 'VISTA' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'">
 
-        <!-- Nombre -->
-        <h2 th:text="${propuesta.nombre}">Nombre de propuesta</h2>
+      <!-- Edad Objetivo de la propuesta -->
+      <div class="edad-propuesta">
 
-        <!-- Descripcion -->
-        <p th:text="${propuesta?.descripcion}">Aqui va la descripcion detallada de la propuesta</p>
+        <h2>Edad objetivo</h2>
+        <p>Edades comprendidas entre
+
+          <select class="inputCentrado" id="edades" name="edades"
+            th:if="${modo} eq 'ULTIMATUM' or ${modo} eq 'CREACION'" required>
+            <option value="" disabled selected>Elige la edad objetivo</option>
+            <option value="5-10">5 - 10</option>
+            <option value="10-15">10 - 15</option>
+            <option value="15-20">15 - 20</option>
+            <option value="20-25">20 - 25</option>
+            <option value="25-30">25 - 30</option>
+            <option value="30-35">30 - 35</option>
+            <option value="35-40">35 - 40</option>
+            <option value="40-45">40 - 45</option>
+          </select>
+          <span th:if="${modo} eq 'VISTA' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'"
+            th:text="${propuesta?.edadMinPublico + ' - ' + propuesta?.edadMaxPublico}"> </span>
+
+          años</p>
+
       </div>
 
-    </div>
 
-    <!-- Edad Objetivo de la propuesta -->
-    <div class="edad-propuesta">
-
-      <h2>Edad objetivo</h2>
-      <p>Edades comprendidas entre
-
-        <select class="inputCentrado" id="edades" name="edades" th:if="${modo} eq 'ULTIMATUM' or ${modo} eq 'CREACION'" required>
-          <option value="" disabled selected>Elige la edad objetivo</option>
-          <option value="5-10">5 - 10</option>
-          <option value="10-15">10 - 15</option>
-          <option value="15-20">15 - 20</option>
-          <option value="20-25">20 - 25</option>
-          <option value="25-30">25 - 30</option>
-          <option value="30-35">30 - 35</option>
-          <option value="35-40">35 - 40</option>
-          <option value="40-45">40 - 45</option>
-        </select>
+      <!-- Sueldo de la propuesta -->
+      <div class="sueldo-propuesta">
+        <h2>Sueldo mensual</h2>
+        <input th:if="${modo} eq 'ULTIMATUM' or ${modo} eq 'CREACION'" required type="number" name="sueldo" min="0"
+          class="inputCentrado">
         <span th:if="${modo} eq 'VISTA' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'"
-          th:text="${propuesta?.edadMinPublico + ' - ' + propuesta?.edadMaxPublico}"> </span>
-
-      años</p>
-
-    </div>
+          th:text="${propuesta.sueldo + '€'}"> </span>
+      </div>
 
 
-    <!-- Sueldo de la propuesta -->
-    <div class="sueldo-propuesta">
-      <h2>Sueldo mensual</h2>
-        <input th:if="${modo} eq 'ULTIMATUM' or ${modo} eq 'CREACION'" required type="number" name="sueldo" min="0" class="inputCentrado">
-        <span th:if="${modo} eq 'VISTA' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'" th:text="${propuesta.sueldo + '€'}"> </span>
-    </div>
+      <!-- Periodo -->
+      <div class="periodo-propuesta">
+        <h2>Periodo de la propuesta</h2>
+        <p th:if="${modo} eq 'ULTIMATUM' or ${modo} eq 'CREACION'">De <input type="date" name="fechaInicio" required>
+          a <input type="date" name="fechaFin" required></p>
 
-
-    <!-- Periodo -->
-    <div class="periodo-propuesta">
-      <h2>Periodo de la propuesta</h2>
-      <p th:if="${modo} eq 'ULTIMATUM' or ${modo} eq 'CREACION'">De <input type="date" name="fechaInicio" required>
-        a <input type="date" name="fechaFin" required></p>
-
-      <p th:if="${modo} eq 'VISTA' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'" th:text="${'Desde ' + #temporals.format(propuesta.fechaInicio,
+        <p th:if="${modo} eq 'VISTA' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'" th:text="${'Desde ' + #temporals.format(propuesta.fechaInicio,
         'dd-MM-yyyy') + ' hasta ' + #temporals.format(propuesta.fechaFin,'dd-MM-yyyy')}"></p>
-    </div>
+      </div>
 
-    <!-- Imagen -->
-    <div class="imagen-propuesta">
-      <h2>Imagen campaña</h2>
-      <span th:if="${modo} eq 'CREACION'">
-        <input type="file" name="imagenPropuesta" required>
-      </span>
-      <img th:if="${modo} eq 'VISTA' or ${modo} eq 'ULTIMATUM' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'" id="imagen-propuesta"
-        th:src="@{/propuesta/{id}/photo(id=${propuesta.id})}">
-    </div>
+      <!-- Imagen -->
+      <div class="imagen-propuesta">
+        <h2>Imagen campaña</h2>
+        <span th:if="${modo} eq 'CREACION'">
+          <input type="file" name="imagenPropuesta" required>
+        </span>
+        <img
+          th:if="${modo} eq 'VISTA' or ${modo} eq 'ULTIMATUM' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'"
+          id="imagen-propuesta" th:src="@{/propuesta/{id}/photo(id=${propuesta.id})}">
+      </div>
 
-    <!-- Tags -->
-    <div class="tags-propuesta">
-      <h2>Tags relacionados con la propuesta</h2>
-      <textarea th:if="${modo} eq 'CREACION'" name="tags" rows="2" cols="50" required
-        placeholder="Introduzca los tags separados por comas"></textarea>
-      <div th:if="${modo} eq 'VISTA' or ${modo} eq 'ULTIMATUM' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'">
-        <button th:each="tag:${#strings.listSplit(propuesta.tags, ',')}" class="w3-button w3-white tags" th:text="${tag}"></button>
+      <!-- Tags -->
+      <div class="tags-propuesta">
+        <h2>Tags relacionados con la propuesta</h2>
+        <textarea th:if="${modo} eq 'CREACION'" name="tags" rows="2" cols="50" required
+          placeholder="Introduzca los tags separados por comas"></textarea>
+        <div
+          th:if="${modo} eq 'VISTA' or ${modo} eq 'ULTIMATUM' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'">
+          <button th:each="tag:${#strings.listSplit(propuesta.tags, ',')}" class="w3-button w3-white tags" th:text="${tag}"></button>
       </div>
     </div>
 
@@ -123,11 +131,14 @@
         <button class="w3-btn btnColor w3-margin btnAceptar">Aceptar</button>
         <button  class="w3-btn btnColor w3-margin btnRechazar">Rechazar</button>
       </div>
-      <button th:if="${modo} eq 'VISTA' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'" class="w3-display-topright" id="btnDenunciar">Denunciar</button>
     </div>
 
   </form>
+  
+  <!-- Boton Denunciar -->
+  <button th:if="${modo} eq 'VISTA' or ${modo} eq 'VISTA-ULTIMATUM' or ${modo} eq 'CONTRATACION'" class="w3-display-topright" id="btnDenunciar" th:attr="data-id=${propuesta.id}">Denunciar</button>
 
+  </div>
   <!-- Boton de cerrar -->
   <div class="divCentrado"> 
     <button th:if="${modo} eq 'CONTRATACION'" class="w3-btn btnColor w3-margin" onclick="document.getElementById('modal').style.display='none'">Cerrar contratación</button>
