--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -18,6 +18,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway" , sans-serif !important;}
 	align-self:center;
 }
 
+input{
+	text-align:center;
+}
+
 .estrella {
 	text-decoration: none;
 	font-size: 32px;
