--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -42,6 +42,9 @@
     <div  th:replace="fragments/tablaAdmin.html"></div></div>
 </main>
 
+
+	  <p th:text="${mensaje}" id="mensajeInfo" hidden></p>
+
     <!-- Footer -->
     <footer th:replace="fragments/navigation.html :: footer"></footer>
 
