WebSockets notificar al administrador registro usuario/propuesta

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -40,7 +40,12 @@ a:hover{
 }
 
 .divFlex{
-	display:flex;
+	display:flex !important;
+}
+
+
+#btnNumeroNotificaciones{
+	width: fit-content;
 }
 
 .horizontalBar {
