Prueba icono (cambiar imagen)

--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -17,7 +17,9 @@
         <div class="title w3-display-container">
             
             <!-- Logo -->
-            <a class="logo w3-hover-text-white w3-display-topleft" th:href="${session.u.hasRole('ADMIN')}?@{/administracion}:@{/inicio}">INFLUENCING</a>
+            <a class="logo w3-hover-text-white w3-display-topleft" th:href="${session.u.hasRole('ADMIN')}?@{/administracion}:@{/inicio}"><img
+                src="https://cdn2.iconfinder.com/data/icons/life-skills-color/64/influence-without-authority-team-teamwork-512.png"
+                width=70 height=70/>INFLUENCING</a>
             
             <!-- Titulo Pagina -->
             <div class="w3-display-bottommiddle tituloPag">
