--- a/src/main/resources/templates/modals/denuncia.html
+++ b/src/main/resources/templates/modals/denuncia.html
@@ -97,6 +97,7 @@
           
         </div>
 
+         <input type="hidden" name="ruta" th:value="${ruta}">
         <!-- Botones interactivos -->
         <div class="divCentrado">
             <button th:if="${modo} eq 'CREACION'" class="w3-btn btnColor w3-margin" type="submit">Enviar denuncia</button>
