Aceptar/rechazar ultimatum funcionando. Notificaciones cuando se manda y decide un ultimatum.

--- a/src/main/resources/templates/negociacion.html
+++ b/src/main/resources/templates/negociacion.html
@@ -48,6 +48,10 @@
             <div id="contenidoChat"></div>
             <input id="botonEnviar" type="text" placeholder="Introduzca su mensaje...">
         </div>
+
+      <!-- Mensaje de informacion -->
+	  <p th:text="${mensaje}" id="mensajeInfo" hidden></p>
+
     </div>
 
     <!-- Footer -->
