--- a/src/main/resources/templates/modals/propuesta.html
+++ b/src/main/resources/templates/modals/propuesta.html
@@ -128,8 +128,8 @@
       <button  th:if="${modo} eq 'CREACION'" class="w3-btn btnColor w3-margin" id="btnPublicarPropuesta">Publicar</button>
       <button  th:if="${modo} eq 'VISTA' and ${session.u.hasRole('INFLUENCER')}" class="w3-btn btnColor w3-margin">Apuntarse</button>
       <div class="botones-propuesta" th:if="${modo} eq 'VISTA-ULTIMATUM' and not ${propio}"> 
-        <button class="w3-btn btnColor w3-margin btnAceptar">Aceptar</button>
-        <button  class="w3-btn btnColor w3-margin btnRechazar">Rechazar</button>
+        <button class="w3-btn btnColor w3-margin btnAceptar" name="decision" value="true">Aceptar</button>
+        <button  class="w3-btn btnColor w3-margin btnRechazar" name="decision" value="false">Rechazar</button>
       </div>
     </div>
 
